infra/gke/manifests/selkies-gstreamer/selkies-gstreamer-service.yaml
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

apiVersion: v1
kind: Service
metadata:
  name: selkies-gstreamer
spec:
  clusterIP: None
  type: ClusterIP
  ports:
    - name: http-web
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: selkies-gstreamer
