infra/gke/manifests/selkies-gstreamer/selkies-gstreamer-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: selkies-gstreamer
spec:
  selector:
    asm: ingressgateway-xlb
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      # Default gateway handles all hosts
      hosts:
        - "*"
