infra/gke/manifests/selkies-gstreamer/selkies-gstreamer-virtualservice.yaml
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: selkies-gstreamer
spec:
  hosts:
    - "*"
  gateways:
    - selkies-gstreamer
  http:
    - match:
        - uri:
            prefix: /selkies-gstreamer/
      rewrite:
        uri: /
      route:
        - destination:
            host: selkies-gstreamer
            port:
              number: 8080
